# advent2022

./: .gitignore  LICENSE  Makefile  README.md  advent2021.cabal  advent2022.cabal
SwiftSolutions.playground/: contents.xcplayground
SwiftSolutions.playground/Pages/Advent01.xcplaygroundpage/: Contents.swift
SwiftSolutions.playground/Pages/Fonts.xcplaygroundpage/: Contents.swift  timeline.xctimeline
SwiftSolutions.playground/Resources/: Path.txt
SwiftSolutions.playground/Sources/: path.swift
SwiftSolutions.playground/playground.xcworkspace/xcuserdata/lyndon.xcuserdatad/: UserInterfaceState.xcuserstate
src/: Advent01.hs  Advent02.hs  Advent03.hs  Advent04.hs  Advent05.hs  Advent06.hs  Advent07.hs  Advent08.hs  Advent09.hs  Advent09b.hs  Advent10.hs  Advent11.hs  Advent12.hs  Advent13.hs  Advent14.hs  Advent15.hs  Advent16.hs  Advent16b.hs  Advent17.hs  Cuboids.hs  Main.hs  Utils.hs
